Changelog
*********

1.9 - Unreleased
================



1.8 - 2010-06-08
================

* WARNING! Backward incompatible change for Genshi templates.
  It wasn't possible to access parts with a dash in the name, so now you have
  to use ${parts.partname} or ${parts['part-name']}. In addition it is now
  possible to access the current part with ``options``.
  [fschulze]

* Import genshi modules very late to prevent issues with zc.buildout.
  [fschulze]


1.7 - 2010-05-21
================

* Added support for genshi text templates. Use them with this as the
  recipe:
  `recipe = collective.recipe.template[genshi]:genshi`
  Use a dot between the section name and the option name instead of a colon.
  [fschulze]


1.6 - 2010-02-24
================

* Output file mode is now assumed to be octal, like chmod.
  [elro]

* Inline template can now be specified with the inline option.
  [elro]


1.5 - 2010-02-23
================

* Add support for explicitly setting the output file mode.
  [witsch]

* Add support for inline templates.
  [witsch]


1.4 - 2009-07-29
================

* Fixed the way variables in templates are substituted to allow buildout to
  determine dependencies on other parts and prepare those correctly. [tlotze]


1.3 - 2009-04-28
================

* Add support for output path creation. You can do::

    output = /path/to/target

  and intermediate path items will be created if they do not exist.
  [ulif]

* Add tests.
  [ulif]


1.2 - 2008-12-09
================

(By accident the 1.1 release was marked as 1.2. So in fact they are
the same.)

1.1 - 2008-12-09
================

* Correct handling of multiple variables in a line. Bugreport and patch from
  Roman Susi.
  [wichert]


1.0 - 2008-10-16
================

* Copy the mode of the input file to the output file. This makes it possible
  to create executable scripts.
  [wichert]

* Add missing link in README.
  [wichert]


1.0rc2 - 2008-07-04
===================
