@@ -4,6 +4,8 @@ Changelog
 1.9 - Unreleased
 ================
 
+* Add URL input support
+  [aclark]
 
 
 1.8 - 2010-06-08
